--- a/.github/workflows/check-gifts.yml
+++ b/.github/workflows/check-gifts.yml
@@ -1,8 +1,9 @@
 name: Check gifts
 
 on:
-  schedule:
-    - cron: "1 * * * *" 
+  workflow_dispatch:
+  # schedule:
+  #   - cron: "1 * * * *" 
 
 jobs:
   check:
